--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/yoongeemin/Express_Fiscus#readme",
   "dependencies": {
+    "assets-webpack-plugin": "^3.4.0",
     "babel-core": "^6.6.4",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-runtime": "^6.5.2",
