--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,1 +1,1 @@
-{"app":{"js":"app.8d5d775e811614552382.js","css":"app.8d5d775e811614552382.css"},"server":{"js":"server.a056cda00d6608dcd1e4.js"}}
+{"app":{"js":"app.6b12a12decb1d1e01c4a.js","css":"app.6b12a12decb1d1e01c4a.css"}}
