--- a/package.json
+++ b/package.json
@@ -52,14 +52,13 @@
     "jquery": "^2.2.2",
     "jquery-ui": "^1.10.5",
     "json-loader": "^0.5.4",
+    "jsonwebtoken": "^5.7.0",
     "koa": "^1.2.0",
     "koa-bodyparser": "^2.0.1",
     "koa-compress": "^1.0.9",
     "koa-cors": "0.0.16",
     "koa-csrf": "^2.4.0",
     "koa-favicon": "^1.2.1",
-    "koa-generic-session": "^1.10.1",
-    "koa-generic-session-mongo": "^0.2.5",
     "koa-logger": "^1.3.0",
     "koa-passport": "^1.3.0",
     "koa-response-time": "^1.0.2",
