--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "koa-cors": "0.0.16",
     "koa-csrf": "^2.4.0",
     "koa-favicon": "^1.2.1",
+    "koa-generic-session": "^1.10.2",
+    "koa-generic-session-mongo": "^0.2.5",
     "koa-logger": "^1.3.0",
     "koa-passport": "^1.3.0",
     "koa-response-time": "^1.0.2",
