--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "composition": "^2.3.0",
     "compression": "^1.6.1",
     "connect-mongo": "^1.1.0",
+    "consolidate": "^0.14.0",
     "cookie-parser": "^1.4.1",
     "css-loader": "^0.23.1",
     "csurf": "^1.8.3",
@@ -85,6 +86,7 @@
     "react-router-redux": "^4.0.0",
     "redux": "^3.3.1",
     "redux-logger": "^2.5.2",
+    "redux-promise": "^0.5.3",
     "redux-thunk": "^1.0.3",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.0",
