--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-router": "^2.0.0",
     "react-router-redux": "^4.0.0",
     "redux": "^3.3.1",
+    "redux-immutable": "^3.0.6",
     "redux-logger": "^2.5.2",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.0.1",
